# genai-googlecloud-scripts

./: .gcloudconfig  .gitattributes  .gitignore  GEMINI.md  Makefile  README.md  genai-googlecloud-script.code-workspace  justfile
.gemini/: settings.json
01-bash-text/: .echodo_history  .tmp.bard.lastsong  README.md  genai-code-generate.sh  genai-text-generate.sh
01-bash-text-and-code/: .echodo_history  genai-text-generate.sh
01-bash-text-code-embeddings/: .echodo_history  .gcloudconfig.yaml  .tmp.bard.lastsong  README.md  genai-embeddings-generate.sh
02-bash-images/: Makefile  README.md  images-generate.sh
03-ruby-medium-article-slurper/: .gitignore  Gemfile  Makefile  README.md  gcp_auth.rb  lib_genai.rb  main.rb  test.rb
04-ruby-twitter-sampler/: README.md
05-ruby-embedding-matrix/: .gitignore  Gemfile  Makefile  README.md  embeddings-holiday-destinations.txt  embeddings-songs-test.txt  embeddings.txt  lib_embeddings.rb  lib_matrix.rb  main.rb
06-ruby-text-code-embeddings-images/: .gitignore  Gemfile  Makefile  README.md  genai-code-generate.rb  genai-embeddings-crunch.rb  genai-embeddings-generate.rb  genai-images-generate.rb  genai-text-generate.rb  (+1 more)
28-computer-use/computer-use-preview/: .gitignore  DEREK_HOWTO.md  README.md  agent.py  justfile  main.py  pyproject.toml  requirements.txt  test_agent.py  test_main.py
28-computer-use/computer-use-preview/computers/: __init__.py  computer.py
28-computer-use/computer-use-preview/computers/browserbase/: browserbase.py
28-computer-use/computer-use-preview/computers/playwright/: playwright.py
(+606 files in other folders)
