[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-use-agent"
version = "0.1.0"
description = "A preview of the Gemini computer-use agent."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }